# research-paper-copilot

./: .gitattributes  .gitignore  CHANGELOG.md  Next_Steps.md  PRD.md  README.md
app/: Cargo.toml  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.web.config.ts  web.html
app/crates/copilot-core/: Cargo.toml  presets.json
app/crates/copilot-core/examples/: build_sample.rs  concept_spike.rs  enrich_sample.rs  ingest.rs  layout_dump.rs  pipeline_dump.rs  run_concepts.rs  search_probe.rs
app/crates/copilot-core/src/: ai.rs  annotations.rs  arxiv.rs  backlinks.rs  bundle.rs  capabilities.rs  chat.rs  citations.rs  codemap.rs  collab.rs  concept_registry.rs  concepts.rs  context.rs  contributions.rs  embeddings.rs  equations.rs  experiments.rs  extension.rs  figures_tables.rs  gaps.rs  graph_index.rs  identify.rs  implementations.rs  layout.rs  learning.rs  lessons.rs  lib.rs  library.rs  novelty.rs  objects.rs  pipeline.rs  plugin.rs  provider_config.rs  refs_context.rs  registry.rs  reproduction.rs  reviews.rs  sandbox.rs  schemas.rs  search.rs  (+2 more)
app/crates/copilot-core/src/sync/: crypto.rs  engine.rs  manifest.rs  merge.rs  mod.rs  remote.rs  s3.rs
app/crates/copilot-core/tests/: anthropic_compatible_endpoint.rs  context_efficiency.rs  golden_corpus.rs  hostile_pdfs.rs  latex_importer.rs  perf_budgets.rs  reference_exporters.rs  render_regression.rs  repro_corpus.rs  sync_engine.rs  wasi_roundtrip.rs  workspace_collab.rs
app/crates/registry-server/: Cargo.toml
app/crates/registry-server/src/: lib.rs  main.rs
app/crates/registry-server/tests/: end_to_end.rs
app/perf/: budgets.toml
app/plugins-src/exporters/: Cargo.toml
app/plugins-src/exporters/src/: lib.rs
app/plugins-src/latex-importer/: Cargo.toml
app/plugins-src/latex-importer/src/: lib.rs
app/plugins/latex-importer/: plugin.json  plugin.wasm
app/plugins/reference-exporters/: plugin.json  plugin.wasm
app/schemas/research-format/v0/: README.md  citations.schema.json  common.schema.json  knowledge_graph.schema.json  layout.schema.json  metadata.schema.json  objects.schema.json  semantic_tree.schema.json
app/schemas/research-format/v0/examples/: citations.json  knowledge_graph.json  layout.json  metadata.json  semantic_tree.json
app/scripts/: check-wasm.sh  fetch-pdfium.sh  validate-schemas.mjs
app/src/: Annotations.tsx  App.tsx  CanvasEditor.tsx  ChatOverlay.tsx  ChatScreen.tsx  CitationLayer.tsx  CommunityPane.tsx  Dashboard.tsx  DiskHygiene.tsx  ExperimentWorkbench.tsx  ExtensionMode.tsx  GlobalChatView.tsx  GraphView.tsx  ImplementationPanel.tsx  InkLayer.tsx  LearningData.tsx  Library.tsx  MarkdownEditor.tsx  MarkdownEditorLazy.tsx  NoteEditor.tsx  ObjectPanel.tsx  PaperMarkdownDialog.tsx  PluginPane.tsx  ProviderPresets.tsx  Reader.tsx  ReadingMode.tsx  ReproductionPane.tsx  ResearchView.tsx  Settings.tsx  SyncSettings.tsx  WorkspacesPanel.tsx  main.tsx  main.web.tsx  styles.css  theme.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/sample/attention-is-all-you-need.research/: citations.json  embeddings_index.json  knowledge_graph.json  layout.json  metadata.json  semantic_tree.json
app/src-tauri/resources/sample/attention-is-all-you-need.research/equations/: 024f4e64-24b3-5994-87b7-1c70b09dc2a1.json  0b8cfaed-e094-502f-bd22-40667209e6b7.json  44c92032-6c87-5a39-b1cd-cd875c863e92.json  4834f069-1b8b-53dd-947f-460df772d4ac.json
app/src-tauri/resources/sample/attention-is-all-you-need.research/flashcards/: 143f3079-0dc4-5cc7-a85f-f7a1616e9981.json  19a9c03e-62dc-56c3-a5bd-d829f9c39a6d.json  19bcbedf-4525-5d9b-b5bf-c8492f8f5386.json  2e2e03e1-1081-5e64-ad14-ba18f1082153.json  98c8f3c5-3838-593f-a3c3-f6f51b2900a7.json  a4554d4e-edf6-5d13-88ab-1c8f9ca0f2bd.json  cd7bad5f-ff3a-5830-90e1-72a08d085411.json  cdd453f0-c5e1-5fe1-8e77-27aad764a7c3.json
app/src-tauri/resources/sample/attention-is-all-you-need.research/quizzes/: 143f3079-0dc4-5cc7-a85f-f7a1616e9981.json  19a9c03e-62dc-56c3-a5bd-d829f9c39a6d.json  19bcbedf-4525-5d9b-b5bf-c8492f8f5386.json  2e2e03e1-1081-5e64-ad14-ba18f1082153.json  98c8f3c5-3838-593f-a3c3-f6f51b2900a7.json  a4554d4e-edf6-5d13-88ab-1c8f9ca0f2bd.json  cd7bad5f-ff3a-5830-90e1-72a08d085411.json  cdd453f0-c5e1-5fe1-8e77-27aad764a7c3.json
app/src-tauri/src/: lib.rs  main.rs
app/src/ai/: NoProviderNotice.tsx  ObjectLinkedText.tsx  useAiStream.ts
app/src/canvas/: shared.ts
app/src/chrome/: AppContextMenu.tsx  CapabilityBanner.tsx  ImportArxivDialog.tsx  Omnibar.tsx  ThemeToggle.tsx  importActions.ts
app/src/components/ai-elements/: prompt-input.tsx
app/src/components/ui/: dock.tsx
app/src/platform/: index.ts
docs/: competitive-analysis.md  ux-principles.md  vision.md
openspec/: config.yaml
(+128 files in other folders)
