[package]
name = "research-paper-copilot"
description = "Research Paper Copilot desktop shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "research_paper_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
copilot-core = { path = "../crates/copilot-core" }
tauri-plugin-dialog = "2.7.1"
uuid.workspace = true
sha2.workspace = true
ed25519-dalek = "2.2.0"
