[package]
name = "registry-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference knowledge-registry server: HTTP index over any S3-compatible bucket (or a local folder). Self-hostable by anyone."

[dependencies]
copilot-core = { path = "../copilot-core" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tar = "0.4"

[dev-dependencies]
tempfile = "3"
