# Reference exporters (v5 plugin-api): compiled to wasm32-unknown-unknown
# against ONLY the public plugin ABI (alloc/run over the bundle-view JSON).
# Rebuild: cargo build --release --target wasm32-unknown-unknown
#          (see xtask note in docs/guides/plugins.md)
[package]
name = "reference-exporters"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
